[package]
name = "day-reporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
osascript = "0.3.0"
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
